2005-07-05  Alexander Gottwald  <ago at freedesktop dot org>

	* winwindow.h:
	* winmultiwindowwm.c:
	* winscrinit.c:
	External windowmanagers could connect in multiwindow mode which lead
	to strange results with the internal windowmanager.

2005-07-05  Alexander Gottwald  <ago at freedesktop dot org>

	* *.c:
	Include xwin-config.h if HAVE_XWIN_CONFIG is defined
	Cleanup X11 includes handling
	Warning fixes
	
2005-06-30  Alexander Gottwald  <ago at freedesktop dot org>

	* winmultiwindowwndproc.c:
	Pass serverClient instead of NULL to ConfigureWindow.
	This should fix a crash reported by Øyvind Harboe

2005-06-08  Alexander Gottwald  <ago at freedesktop dot org>

	* winlayouts.h:
	Merge from CYGWIN
	Added layout "French (Canada)" as ca_enhanced 
	Added Czech (QWERTY) layout
	* winshaddnl.c:
	Merge from CYGWIN
	Print error code if winStoreColorsShadowDDNL fails

2005-06-08  Alexander Gottwald  <ago at freedesktop dot org>

	* winmultiwindowwindow.c:
	Fix crash reported by Øyvind Harboe

2005-06-03  Alexander Gottwald  <ago at freedesktop dot org>

	* winmultiwindowwndproc.c:
	* winblock.c:
	Backout last winRaiseWindow patch which caused stacking problems

2005-05-25  Alexander Gottwald  <ago at freedesktop dot org>

	* win.h:
	* winmultiwindowwm.c:
	Workaround bug in pthread.h

2005-05-08  Alexander Gottwald  <ago at freedesktop dot org>

	* winmultiwindowwndproc.c:
	* winblock.c:
	Only call ConfigureWindow from winRaiseWindow if the windows
	message dispatch loop is running.

2005-05-02  Alexander Gottwald  <ago at freedesktop dot org>

	* winerror.c:
	Print correct logfile in FatalError message

2005-04-19  Alexander Gottwald  <ago at freedesktop dot org>

	* winmultiwindowwndproc.c:
	Prevent recursive calls to winRaiseWindow. 

2005-03-10  Alexander Gottwald  <ago at freedesktop dot org>

	* winmultiwindowwndproc.c:
	Force rebuilding of window stack if a window changes it's state from 
	minimized.

2005-03-07  Alexander Gottwald  <ago at freedesktop dot org>
