@@ -720,16 +720,14 @@ winTopLevelWindowProc (HWND hwnd, UINT message,
 #endif
       
       /* Pass the message to the root window */
-      SendMessage (hwndScreen, message, wParam, lParam);
-      return 0;
+      return winWindowProc(hwndScreen, message, wParam, lParam);
 
     case WM_SYSKEYUP:
     case WM_KEYUP:
 
 
       /* Pass the message to the root window */
-      SendMessage (hwndScreen, message, wParam, lParam);
-      return 0;
+      return winWindowProc(hwndScreen, message, wParam, lParam);
 
     case WM_HOTKEY:
 
